# hid

./: README.md
ch01/: ch01.cabal
ch01/app/: Main.hs
ch02/: ch02.cabal
ch02/app/: Contexts.hs
ch02/app/person/: MainDerived.hs  MainImplemented.hs  MainTextShow.hs  Person.hs
ch02/app/radar/: Main.hs  Radar.hs
ch02/data/: turns.txt
ch02/tests/radar/: Test.hs
ch05/: ch05.cabal
ch05/app/: Gcd.hs  GenSQL.hs  Maybe.hs  Reader.hs
expr/: expr.cabal
expr/app/: Expr.hs
mini-containers/: mini-containers.cabal
mini-containers/src/Data/: Deque.hs  Queue.hs  Stack.hs
mini-containers/test/: TestQueue.hs  TestStack.hs
stock-quotes/: stock-quotes.cabal
stock-quotes/app/: Charts.hs  HtmlReport.hs  Main.hs  Params.hs  QuoteData.hs  StatReport.hs
