cabal-version: 2.4
name:          ch02
version:       0.1.0.0
author:        akthrms
maintainer:    akt.hrms@gmail.com

common shared-properties
  build-depends:
    , base  ^>=4.14.3.0
    , flow
    , fmt

  default-language: Haskell2010

executable radar
  import:         shared-properties
  hs-source-dirs: app/radar
  main-is:        Main.hs
  other-modules:  Radar

executable ch02
  import:         shared-properties
  hs-source-dirs: app
  main-is:        Main.hs
