cabal-version: 2.4
name:          ch02
version:       0.1.0.0
author:        akthrms
maintainer:    akt.hrms@gmail.com

common shared-properties
  build-depends:
    , base  ^>=4.14.3.0
    , flow
    , fmt

  default-language: Haskell2010

library radar-lib
  import:          shared-properties
  hs-source-dirs:  app/radar
  exposed-modules: Radar

executable radar
  import:         shared-properties
  hs-source-dirs: app/radar
  main-is:        Main.hs
  build-depends:  radar-lib

test-suite radar-test
  import:         shared-properties
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/radar
  main-is:        Test.hs
  build-depends:
    , radar-lib
    , random     ^>=1.2

executable person-derived
  import:         shared-properties
  hs-source-dirs: app/person
  main-is:        MainDerived.hs
  other-modules:  Person

executable person-implemented
  import:         shared-properties
  hs-source-dirs: app/person
  main-is:        MainImplemented.hs
  other-modules:  Person

executable person-text-show
  import:         shared-properties
  hs-source-dirs: app/person
  main-is:        MainTextShow.hs
  other-modules:  Person
  build-depends:  text-show

library contexts-lib
  import:          shared-properties
  hs-source-dirs:  app
  exposed-modules: Contexts
  build-depends:   mtl
