cabal-version: 2.4
name:          ch05
version:       0.1.0.0

common shared
  build-depends:
    , base  ^>=4.14.3.0
    , flow
    , mtl
    , text

  default-language: Haskell2010

executable maybe
  import:         shared
  main-is:        Maybe.hs
  hs-source-dirs: app

executable reader
  import:         shared
  main-is:        Reader.hs
  hs-source-dirs: app

executable gen-sql
  import:         shared
  main-is:        GenSQL.hs
  hs-source-dirs: app
