cabal-version: 2.4
name:          expr
version:       0.1.0.0
author:        akthrms
maintainer:    akt.hrms@gmail.com

common shared-properties
  build-depends:
    , base  ^>=4.14.3.0
    , flow

  default-language: Haskell2010

executable expr
  import:         shared-properties
  main-is:        Main.hs
  hs-source-dirs: app
