cabal-version: 2.4
name:          mini-containers
version:       0.1.0.0
license:
author:        akthrms
maintainer:    akt.hrms@gmail.com

common shared-properties
  build-depends:
    , base  ^>=4.14.3.0
    , flow

  default-language: Haskell2010

library
  import:          shared-properties
  exposed-modules: MyLib
  hs-source-dirs:  src

test-suite mini-containers-test
  import:         shared-properties
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        MyLibTest.hs
  build-depends:  mini-containers
