cabal-version: 2.4
name:          mini-containers
version:       0.1.0.0
license:
author:        akthrms
maintainer:    akt.hrms@gmail.com

common shared-properties
  build-depends:
    , base        ^>=4.14.3.0
    , containers
    , flow

  default-language: Haskell2010

library
  import:          shared-properties
  exposed-modules:
    Data.Deque
    Data.Queue
    Data.Stack

  hs-source-dirs:  src

test-suite queue-test
  import:         shared-properties
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        TestQueue.hs
  build-depends:  mini-containers

test-suite stack-test
  import:         shared-properties
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        TestStack.hs
  build-depends:  mini-containers
