cabal-version: 2.4
name:          stock-quotes
version:       0.1.0.0
author:        akthrms
maintainer:    akt.hrms@gmail.com

common shared-properties
  build-depends:
    , base  ^>=4.14.3.0
    , flow
    , text
    , bytestring
    , time
    , fmt
    , blaze-html
    , colonnade
    , blaze-colonnade
    , Chart
    , Chart-diagrams
    , cassava
    , optparse-applicative

  default-language: Haskell2010

executable stock-quotes
  import:         shared-properties
  main-is:        Main.hs
  hs-source-dirs: app
  other-modules:
    Charts
    HtmlReport
    Params
    QuoteData
    StatReport
